# SPIMprep-deps

./: Dockerfile  README.md  entrypoint.sh  fiji_jars.txt  fiji_plugins.txt  pyproject.toml  spark_custom_install
