[tool.poetry]
name = "pythondeps"
version = "0.1.0"
description = "Containerized python environment"
authors = ["Ali Khan <alik@robarts.ca>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
snakemake = "^8.0.0"
snakebids = "^0.13.0"
tifffile = "^2023.12.9"
xmltodict = "^0.13.0"
basicpy = "^1.2.0"
npy2bdv = "^1.0.8"
zarr = "^2.16.1"
jax = "0.4.23"
jaxlib = "0.4.23"
imagecodecs = "^2024.1.1"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
zarrnii = "0.1.3a1"
dask = "^2024.7.0"
distributed = "^2024.7.0"
snakemake-storage-plugin-s3 = "^0.2.11"
snakemake-storage-plugin-gcs = "^1.1.1"
gcsfs = "^2024.3.1"
s3fs = "^2024.3.1"
universal-pathlib = "^0.2.2"
google-cloud-iam = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
